[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Coin.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/MeterBackground.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/TurboMeter.png" type="Texture" id=4]
[ext_resource path="res://Assets/Placements/1st.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/DamageBorder.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/HealthMeter.png" type="Texture" id=7]
[ext_resource path="res://UI/Minimap.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/Star7-Eaowe.otf" type="DynamicFontData" id=9]
[ext_resource path="res://UI/CoinLabel.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 9 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DamageTextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 6 )
stretch_mode = 1

[node name="SpeedLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "1,000,000mph"

[node name="TimerLabel" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -66.0
margin_top = 105.0
margin_right = -10.0
margin_bottom = 119.0
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "00:00:00"
align = 2
valign = 1

[node name="RankingTextureRect" type="TextureRect" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -164.0
margin_top = 10.0
margin_right = 860.0
margin_bottom = 570.0
grow_horizontal = 0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="Turbometer" type="TextureProgress" parent="."]
margin_left = 10.0
margin_top = 44.0
margin_right = 175.0
margin_bottom = 65.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="HealthMeter" type="TextureProgress" parent="."]
margin_left = 10.0
margin_top = 75.0
margin_right = 175.0
margin_bottom = 96.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 7 )

[node name="Map" parent="." instance=ExtResource( 8 )]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -138.0
margin_right = 374.0
margin_bottom = 374.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="CoinTexture" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -34.0
margin_right = 22.0
margin_bottom = -22.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CoinLabel" type="Label" parent="CoinTexture"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 14.0
text = "0"
script = ExtResource( 10 )

[node name="RadioLabel" type="Label" parent="."]
margin_left = 14.0
margin_top = 109.0
margin_right = 117.0
margin_bottom = 123.0
rect_scale = Vector2( 1.2, 1.2 )
text = "Now Playing: ???"
align = 2
valign = 1
